--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,19 @@
 .form {
-    background-color: rgb(144, 201, 38);
+    border-radius: 2%;
+    background-color: #A2BB48;
+}
+
+.steps {
+    border: solid;
+    border-color: rgb(255, 255, 255);
+    border-radius: 2%;
+    border-width: 1px;
+    background-color: rgb(189, 207, 119);
+    padding: 1px;
+    margin: 5px;
+}
+
+.button {
+    background-color: black;
+    color: white;
 }
